<resources>
    <string name="app_name">MT Transit</string>

    <!-- Dashboard Strings for multiple fragments -->
    <string name="arrival_time_text">Arrived at %1$s</string>
    <string name="departure_time_text">Departed %1$s at %2$s</string>
    <string name="add_bus_button">Add a bus</string>
    <string name="current_buses_header">Current Buses</string>
    <string name="incoming_buses_header">Incoming Buses</string>
    <string name="set_location_button_text">Set Location</string>
    <string name="passenger_info_text">%1$s/%2$s</string>

    <!-- Location Fragment Test String -->
    <string name="current_user_location_header">Richmond Station</string>

    <!-- Login Fragment Strings -->
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_btn_text">LOGIN</string>

    <!-- Bus Status Viewing Fragment Strings -->
    <string name="bus_status_bus_id_label">Bus ID</string>
<!--    <string name="bus_status_bus_id_text">923</string>-->
    <string name="bus_status_bus_type_label">Bus type</string>
<!--    <string name="bus_status_bus_type_text">Standard</string>-->
    <string name="bus_status_bus_route_label">Route</string>
<!--    <string name="bus_status_bus_route_text">912 Glenferrie to Flinders (Stopping All Stations)</string>-->
    <string name="bus_status_passenger_capacity_label">Passenger capacity</string>
<!--    <string name="bus_status_passenger_capacity_text">70</string>-->
    <string name="bus_status_passenger_onboard_label">Passenger onboard</string>
<!--    <string name="bus_status_passenger_onboard_text">32</string>-->
    <string name="bus_status_passenger_offboard_label">Disembarking passengers</string>
    <string name="bus_status_passenger_boarding_label">Boarding passengers</string>
    <string name="bus_status_btn_mark_as_arrived">MARK AS ARRIVED</string>
    <string name="bus_status_btn_mark_as_departed">MARK AS DEPARTED</string>

    <!-- Bus Data Entry Fragment Strings -->
    <string name="bus_id_input_placeholder">Bus ID</string>
    <string name="bus_type_spinner_label_text">Bus Type</string>
    <string name="bus_route_spinner_label_text">Route</string>
    <string name="bus_capacity_input_placeholder">Passenger Capacity</string>
    <string name="bus_passengers_onboard_input_placeholder">Passengers Onboard</string>
    <string name="submit_button_text">Submit</string>
    <string name="back_to_dashboard_button_text">Back to Dashboard</string>

    <!-- bus routes array for bus routes spinner in bus data entry screen -->
    <string-array name="busRoutes">
        <item>Sandringham To CBD</item>
        <item>Frankston From CBD</item>
        <item>Frankston To CBD</item>
        <item>Sandringham From CBD</item>
    </string-array>

    <!-- bus types array for bus type spinner in bus data entry screen-->
    <string-array name="busTypes">
        <item>Standard</item>
        <item>Express</item>
    </string-array>

    <!-- Account Fragment Strings -->
    <string name="logout_btn_text">LOGOUT</string>
    <string name="account_name_text">Account</string>
    <string name="account_email_text">example@email.com</string>

    <!-- Fragment Title Strings -->
    <string name="login_fragment_title_label">Log In</string>
    <string name="bus_board_fragment_title_label">Bus Dashboard</string>
    <string name="bus_entry_fragment_title_label">Add new bus</string>
    <string name="bus_status_fragment_title_label">Bus Status</string>
    <string name="account_fragment_title_label">Account Detail</string>
    <string name="choose_station_fragment_title_label">Set Station</string>

    <!-- Spinner Fragment Test String Array -->
    <string-array name="test_stations_array">
        <item>Flinders Station</item>
        <item>Toorak Station</item>
        <item>Malvern Station</item>
        <item>Caulfield Station</item>
        <item>Frankston Station</item>
        <item>Prahran Station</item>
        <item>Windsor Station</item>
        <item>Hampton Station</item>
        <item>Sandringham Station</item>
    </string-array>
</resources>